# waste-classification

./: .gitignore  Dockerfile  README.md  notebook.ipynb  pyproject.toml
docs/: project-documentation.md
k8s/: manifest.yaml
model/: waste_classifier_mobilenet_v4.onnx
src/waste_classification/: __init__.py  predict.py  serve.py  train.py
