[project]
name = "waste-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexis Perez", email = "alexispdDev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
waste-classification = "waste_classification:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
